# Smart_Door

./: README.md  package-lock.json
beagle_bone/: CMakeLists.txt
beagle_bone/app/: CMakeLists.txt
beagle_bone/app/include/: button_locker.h  ultrasonic_detector.h
beagle_bone/app/src/: button_locker.c  main.c  shutdown.c  udp.c  ultrasonic_detector.c
beagle_bone/hal/include/hal/: button.h  capture.h  display.h  general_command.h  gpio.h  led.h  servo.h  temperature_sensor.h  ultrasonic.h
beagle_bone/hal/src/: button.c  capture.c  display.c  general_command.c  gpio.c  led.c  servo.c  temperature_sensor.c  ultrasonic.c
webserver/: package-lock.json  package.json
webserver/lib/: beaglebone_server.js
webserver/public/: index.html
webserver/public/javascripts/: beatbox_ui.js
webserver/public/stylesheets/: stylesheet.css
